--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "総合コンテンツ制作サークル"
 title_eng: "Comprehensive Contents Creators"
 subtitle: "創造と表現"
 email: "sokon.meiji@gmail.com"
-description: "明治大学 中野キャンパスで活動している公認サークル"
+description: "サークルで運用しているサービス一覧"
 baseurl: # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
@@ -16,7 +16,7 @@ phone:
 
 # homepage tiles
 tiles-source: posts # accepts "posts" or "pages"
-tiles-count: 6
+tiles-count: 20
 
 # social settings
 github_url: "https://github.com/ccc-sokon"
